Mon May 15 20:23:42 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* tests/audio/Makefile.am: For feature extraction the --cut-zeros
	argument is needed, to eliminate the extra zeros before and after the
	signal. Otherwise, feature comparision will be unreliable.
	For the balance test, I also added the --spectrum and --avg-spectrum
	features again, and renamed the reference file to balance.ref.
	
	* tests/audio/balance.bse: In addition to testing the left and right
	position, the test file now starts with the center position.

	* tests/audio/balance.ref: New reference file (in the new format) for
	the balance test.

Sun May 14 15:20:10 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* tools/bsefextract.cc tools/bsefcompare.cc: Changed format of the
	feature file according to #340386. This allows --permissive matching
	in bsefcompare (which is now default), that can cope with comparing
	matrices or vectors with different sizes. For the --spectrum feature
	this means that you can finally compare the spectrums of two files
	which have the different lengths (only the start of the files will be
	compared).

Sat May 13 21:56:36 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* tools/bsefextract.cc: Got rid of per feature output redirection
	code, and replaced it with a simple "-o" option, which allows all of
	bsefextract's output to be redirected into a file.

Sat May 13 21:09:21 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* tools/bsefextract.cc tools/bsefcompare.cc: Adapt coding style a bit
	to the rest of BEAST (mainly removed semiCapitalizedIdentifiers).

Fri May 12 16:52:32 2006  Tim Janik  <timj@gtk.org>

	* tests/audio/Makefile.am: started rewrite of test rules.

	* tests/audio/bsetowav.scm: don't load scripts or LADSPA plugins. 
	fixed progress indication.

Fri May 12 16:47:08 2006  Tim Janik  <timj@gtk.org>

	* tools/bsefcompare.cc (parse): fixed option parser similar to bsefextract.

Fri May 12 14:44:41 2006  Stefan Westerfeld  <stefan@space.twc.de>
