@@ -1,3 +1,11 @@
+Mon May 15 21:21:28 2006  Tim Janik  <timj@gtk.org>
+
+	* Makefile.decl: added distfile-list:-rule to recursively generate a 
+	list of all DISTFILES files.
+
+	* tests/Makefile.am: check that no .bse file listed in DISTFILES
+	produces warnings when loaded.
+
 Mon May 15 20:23:42 2006  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* tests/audio/Makefile.am: For feature extraction the --cut-zeros
